# Producer-Consumer

./: CMakeLists.txt
inc/: Amis.hpp  Mailbox.hpp  Mailman.hpp  Semaphore.hpp  Worker.hpp
inc/utils/: ANSI.hpp  Random.hpp  Sleep.hpp
scripts/: compile.sh  run.sh
src/: Amis.cpp  Mailbox.cpp  Mailman.cpp  Main.cpp  Semaphore.cpp  Worker.cpp
